--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
             <p>Tel: +995 592 00 32 32</p>
             <p>info@webapp.ge</p>
         </div>
+       <div class="c-position">
+        <p class="c-font-size"> © 2021 - Webapp</p>
+       </div>
+
       </div>
 </body>
 </html>
